--- a/lib/package.json
+++ b/lib/package.json
@@ -18,9 +18,11 @@
     "@ts-rest/open-api": "^3.52.1",
     "fs-extra": "^11.3.2",
     "jszip": "^3.10.1",
-    "mongoose": "^8.19.2"
+    "mongoose": "^8.19.2",
+    "zod-openapi": "^5.4.3"
   },
   "devDependencies": {
-    "@types/fs-extra": "^11.0.4"
+    "@types/fs-extra": "^11.0.4",
+    "openapi3-ts": "^4.5.0"
   }
 }
