--- a/scripts/createDev/package.json
+++ b/scripts/createDev/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "@fastgpt-plugin/create-dev",
-  "version": "0.0.1",
-  "description": "A CLI tool that can be used via bunx or directly from GitHub",
+  "name": "@fastgpt-sdk/plugin-cli",
+  "version": "0.0.2",
+  "description": "Create a FastGPT Plugin CLI Tool",
   "type": "module",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "bin": {
-    "create-dev": "./index.ts"
+    "@fastgpt-sdk/plugin-cli": "dist/index.js"
   },
   "files": [
     "index.ts",
+    "dist/",
     "README.md",
     "LICENSE"
   ],
@@ -31,14 +32,15 @@
   "engines": {
     "bun": ">=1.2.23"
   },
+  "scripts": {
+    "start": "bun run index.ts",
+    "build": "bun build index.ts --outdir dist --target bun"
+  },
   "dependencies": {
-    "commander": "^11.1.0",
-    "inquirer": "^9.2.12"
+    "@inquirer/prompts": "^7.5.3"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
-    "eslint": "^8.52.0",
-    "prettier": "^3.0.3",
     "bun-types": "latest"
   },
   "publishConfig": {
